# ida-rust-plugin-example

./: Cargo.toml  README.md  build.rs
src/: ida.rs  lib.rs  plugin.rs
src/ida/: bindgen.rs  bridge.cpp  bridge.hpp  bridge.rs  types.rs
